[package]
name = "spellthis"
version = "0.1.0"
authors = ["Caio Ribeiro <blueheart@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
csv = "1.1.1"
serde = "1.0.102"
serde_derive = "1.0.102"
regex = "1.3.1"
termion = "1.5.3"
